2025-07-30  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Remove the default ChatGPT backend.

2025-07-30  Zhengyi Fu  <i@fuzy.me>

	Set up load-path for flymake

	* init.el (straight--add-package-to-load-path): New advice.

2025-07-30  Zhengyi Fu  <i@fuzy.me>

	Add configuration for telega

	* site-lisp/telega-config.el: New file.
	* packages.el: Add telega.
	* init.el: Load configuration file for telega.

2025-07-30  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Add presets.

2025-07-30  Zhengyi Fu  <i@fuzy.me>

	* init.el (quilt-list-applied-patches): New command.

2025-07-30  Zhengyi Fu  <i@fuzy.me>

	Add configuration for Moonshot built-in web search tool

	* site-lisp/gptel-config.el ("Moonshot"): Add request_params for
	built-in web search tool.
	("$web_search): Add tool definition.

2025-07-29  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-fonts-alist): Add Unifont and as fallback for
	Unicode characters.

2025-07-29  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/modify-other-keys.el (modify-other-keys--init): Remove
	unneeded logging message.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/modify-other-keys.el (modify-other-keys--init): Ignore
	initial_terminal and graphical displays.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	Fix diff-hl-margin

	* init.el (diff-hl-margin-symbols-alist): Fix invalid key name.
	(diff-hl-margin-ensure-visible): Override this function to set
	margin width automatically.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-faces): Customize diff-hl-margin faces.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	* init.el (diff-hl-margin-symbols-alist): Use more Chinese
	characters.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	Diff-hl: Display Chinese characters in the margins

	* init.el (diff-hl-margin-symbols-alist): Set to use Chinese
	characters.
	(+diff-hl-enlarge-margin-width): New function.  Enlarge margin
	widths to accommodate Chinese characters.

2025-07-28  Zhengyi Fu  <i@fuzy.me>
